# words-calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  data-flow-diagram.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: azure_openai_embeddings.py  cohere_embeddings.py  embeddings_db.py  embeddings_model.py  gemini_api_service.py  glove_embeddings.py  ingest_data_to_db.py  lance_embeddings_db.py  main.py  models.py  openai_embeddings.py  pre_compute_embeddings.py  prompts.yaml  sbert_embeddings.py  utils.py
