[project]
name = "words-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere==5.15.0",
    "gensim==4.3.3",
    "hf-xet>=1.1.2",
    "lancedb==0.22.0",
    "loguru>=0.7.3",
    "openai==1.79.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "sentence-transformers==4.1.0",
    "streamlit==1.45.1",
    "torch==2.2.2",
    "tqdm>=4.67.1",
]
